Bug #20185 Node failure might cause other node failure
Submitted: 1 Jun 2006 6:57 Modified: 2 Jun 2006 6:36
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1,5.0,5.1 OS:
Assigned to: Jonas Oreland Target Version:

[1 Jun 2006 6:57] Jonas Oreland
Description:
If there was node failure while transaction was in state CS_PREPARE_TO_COMMIT
there was a assertion in handle timeout (that was triggered by active transaction abort)

How to repeat:
 

Suggested fix:
[1 Jun 2006 8:29] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/7134
[1 Jun 2006 8:54] Tomas Ulin
pushed to 5.1.12
[1 Jun 2006 8:54] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/7141
[1 Jun 2006 13:17] Jonas Oreland
pushed into 5.0.23
[1 Jun 2006 15:02] Jonas Oreland
pushed into 4.1.21
[2 Jun 2006 6:36] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix in 4.1.21/5.0.23/5.1.12 changelogs. Closed.
[2 Jun 2006 15:23] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/7209
[2 Jun 2006 15:54] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/7210
[19 Mar 2007 12:31] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22249

ChangeSet@1.2440, 2007-03-19 12:31:23+01:00, jonas@perch.ndb.mysql.com +2 -0
  ndb - bug#20185
    Fix race in testprg...causing random TC crashes
[19 Mar 2007 12:34] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22250

ChangeSet@1.2122, 2007-03-19 12:34:43+01:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - bug#20185 (wl2325-5.0)
    fix race in testprg, causing random TC crash
[20 Aug 2008 11:36] Cyril SCETBON
I see that it has been fixed in 5.0.23, but I can't find information about it in 5.1
changes. Did you update the 5.1 branch ?