ndb - bug#20185   second try - handle CS_PREPARE_TO_COMMIT explicitly